welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:5: error: not found: value nbBaggle
    if (nbBaggle<3) {
        ^